--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
-    "eslint": "^7.1.0"
+    "eslint": "^7.1.0",
+    "sequelize": "^5.21.12",
+    "sqlite3": "^4.2.0"
   }
 }
