--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "&",
-    "token": "NjkzMjM0MDM5MTcxMzE3ODEx.Xt2aCQ.tjPUwwGukCOiiwjTH7v-qiNCocU"
+    "token": "NjkzMjM0MDM5MTcxMzE3ODEx.XuB_mA.7FxxhOhl9CQ-RyfgcjZpvS90C4I"
 }
