--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "discord.js": "^12.2.0",
     "eslint": "^7.1.0",
     "sequelize": "^5.21.12",
