made stand table attributes nonunique

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "&",
-    "token": "NjkzMjM0MDM5MTcxMzE3ODEx.XuKbbg.p7w9WCeo65oHsZFkw2BCoe8bXQY"
+    "token": "NjkzMjM0MDM5MTcxMzE3ODEx.XuR0HA.3uggKqKTPRtxW-um6A-iWeouXUE"
 }
